# src/modules/auth/dto/logout-response.dto.ts
@@ -1,0 +1,7 @@
+// src/modules/auth/dto/logout-response.dto.ts
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LogoutResponseDto {
+  @ApiProperty({ example: true })
+  ok: boolean;
+}
